--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
           <a href="{{ site.github.tar_url }}" class="download-button tar"><span>Download</span></a>
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
-          {% unless page.url == "/CSS-Tutorials" %}      
-          <a style="color: white; text-decoration: underline;" href="/">Go back</a>
+          {% unless page.url == "/" %}      
+          <a style="color: white; text-decoration: underline;" href="/CSS-Tutorials">Go back</a>
           {% endunless %}
         </div>
         <span class="blc"></span><span class="trc"></span>
