--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,13 @@
 //pages
 @import "pages/animations.css";
 @import "pages/fundamentals.css";
+
+//code examples
+@import "code-examples/display.css";
+@import "code-examples/transitions.css";
+
+.codeExampleContainer {
+    padding: 5px;
+    background-color: #3b3b3b;
+}
+
