--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
+      <h1 class="title">CSS concepts</h1>
     </header>
     <div id="container">
       <p class="tagline">{{ site.description | default: site.github.project_tagline }}</p>
@@ -31,7 +31,7 @@
           <a href="{{ site.github.zip_url }}" class="download-button zip"><span>Download</span></a>
           {% endif %}
           {% unless page.url == "/" %}      
-          <a style="color: white; text-decoration: underline;" href="/CSS-Tutorials">Go back</a>
+          <a style="color: white; text-decoration: underline;" href="/CSS-Tutorials">Home page</a>
           {% endunless %}
         </div>
         <span class="blc"></span><span class="trc"></span>
